--- a/.github/workflows/awsCICD.yml
+++ b/.github/workflows/awsCICD.yml
@@ -25,7 +25,7 @@ jobs:
 
     - name: Deploy Spring Boot to EC2
       run: |
-        ssh -i ec2-user@${{ secrets.EC2_HOST }} << 'EOF'
+        ssh -i ~/.ssh/id_rsa ec2-user@${{ secrets.EC2_HOST }} << 'EOF'
           set -e
           echo "Entrando al directorio de la app"
           cd /home/ec2-user/mi-app
