Add bootJar step to AWS CI/CD workflow for building the application

--- a/.github/workflows/awsCICD.yml
+++ b/.github/workflows/awsCICD.yml
@@ -45,6 +45,8 @@ jobs:
           chmod +x gradlew
           ./gradlew build -x test
 
+          ./gradlew bootJar
+
           echo "Deteniendo el proceso anterior"
           pkill -f '.jar' || true
 
