--- a/.github/workflows/awsCICD.yml
+++ b/.github/workflows/awsCICD.yml
@@ -48,10 +48,10 @@ jobs:
           ./gradlew bootJar
 
           echo "Deteniendo el proceso anterior"
-          pkill -f '.jar' || true
+          pkill -f 'back_law_office-0.0.1-SNAPSHOT.jar' || true
 
           echo "Ejecutando nueva versión"
-          nohup java -jar build/libs/*.jar > app.log 2>&1 &
+          java -jar build/libs/back_law_office-0.0.1-SNAPSHOT.jar > app.log 2>&1 &
 
           echo "Despliegue completo"
         EOF
