--- a/.github/workflows/awsCICD.yml
+++ b/.github/workflows/awsCICD.yml
@@ -40,7 +40,7 @@ jobs:
           sed -i "s|\${DB_NAME}|${{ secrets.DB_NAME }}|g" src/main/resources/application.properties
           sed -i "s|\${DB_USERNAME}|${{ secrets.DB_USERNAME }}|g" src/main/resources/application.properties
           sed -i "s|\${DB_PASSWORD}|${{ secrets.DB_PASSWORD }}|g" src/main/resources/application.properties
-
+          echo cat src/main/resources/application.properties
 
           
           echo "Compilando la app con Gradle"
