--- a/.github/workflows/main_law-office.yml
+++ b/.github/workflows/main_law-office.yml
@@ -1,6 +1,3 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
 name: Build and deploy JAR app to Azure Web App - law-office
 
 on:
@@ -13,7 +10,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     permissions:
-      contents: read #This is required for actions/checkout
+      contents: read
 
     steps:
       - uses: actions/checkout@v4
@@ -24,14 +21,17 @@ jobs:
           java-version: '17'
           distribution: 'microsoft'
 
-      - name: Build with Maven
-        run: mvn clean install
+      - name: Setup Gradle
+        uses: gradle/gradle-build-action@v2
+
+      - name: Build with Gradle
+        run: ./gradlew clean build -x test
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
           name: java-app
-          path: '${{ github.workspace }}/target/*.jar'
+          path: '${{ github.workspace }}/build/libs/*.jar'
 
   deploy:
     runs-on: ubuntu-latest
@@ -40,21 +40,41 @@ jobs:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
     permissions:
-      id-token: write #This is required for requesting the JWT
-      contents: read #This is required for actions/checkout
-  
+      id-token: write
+      contents: read
+
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
           name: java-app
-      
+
       - name: Login to Azure
         uses: azure/login@v2
         with:
           client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_5B21925D799743BCBFCDE9FB2EC3463F }}
           tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_67FA359EC70A4AED9A9D382245891DD9 }}
           subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_8E440A11D2AC432E87C451E21661AC07 }}
+
+      - name: Replace DB connection variables
+        run: |
+          # Define variables from secrets
+          DB_HOST="${{ secrets.DB_HOST }}"
+          DB_PORT="${{ secrets.DB_PORT }}"
+          DB_NAME="${{ secrets.DB_NAME }}"
+          DB_USERNAME="${{ secrets.DB_USERNAME }}"
+          DB_PASSWORD="${{ secrets.DB_PASSWORD }}"
+
+          # Replace variables in application.properties
+          TEMP_FILE=$(mktemp)
+          sed -e "s|\${DB_HOST}|$DB_HOST|g" \
+              -e "s|\${DB_PORT}|$DB_PORT|g" \
+              -e "s|\${DB_NAME}|$DB_NAME|g" \
+              -e "s|\${DB_USERNAME}|$DB_USERNAME|g" \
+              -e "s|\${DB_PASSWORD}|$DB_PASSWORD|g" \
+              application.properties > "$TEMP_FILE" && mv "$TEMP_FILE" application.properties
+
+          cat application.properties
 
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
@@ -63,4 +83,3 @@ jobs:
           app-name: 'law-office'
           slot-name: 'Production'
           package: '*.jar'
-          
