--- a/.github/workflows/main_law-office.yml
+++ b/.github/workflows/main_law-office.yml
@@ -24,6 +24,9 @@ jobs:
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2
 
+      - name: Give execute permissions to Gradle wrapper
+        run: chmod +x ./gradlew
+        
       - name: Build with Gradle
         run: ./gradlew clean build -x test
 
