--- a/.github/workflows/main_law-office.yml
+++ b/.github/workflows/main_law-office.yml
@@ -65,4 +65,4 @@ jobs:
         with:
           app-name: 'law-office'
           slot-name: 'Production'
-          package: '*.jar'
+          package: 'back_law_office-0.0.1-SNAPSHOT.jar'
