--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,9 @@ server.port=8081
 spring.application.name=back_law_office
 
 
-spring.datasource.url=jdbc:mysql://localhost:3306/consultorio
-spring.datasource.username=root
-spring.datasource.password=12345
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
